# cdlabel

./: CMakeLists.txt  DEMO.md  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  NumericalPass.cpp  README.md  build.sh  numsan  run.sh  test_multiply.c  test_out
artifacts/: math_test_instrumented  math_test_instrumented.bc  multiply_test  test_combined_san  test_energy_subtract_san  test_exchange_rate_san  test_finance_fee_san  test_interest_compound_san  test_multiply_san  test_parallel_resistance_san  test_path_sum_san  test_physics_scale_san  test_projectile_san  test_quadratic_san  test_sensor_highpass_san  test_signal_cancel_san  test_temperature_delta_san  test_vector_norm_san
src/: NumericalPass.cpp  numsan_rt.c
tests/: test_combined.c  test_energy_subtract.c  test_exchange_rate.c  test_finance_fee.c  test_interest_compound.c  test_parallel_resistance.c  test_path_sum.c  test_physics_scale.c  test_projectile.c  test_quadratic.c  test_sensor_highpass.c  test_signal_cancel.c  test_temperature_delta.c  test_vector_norm.c
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/backend/: main.py
ui/src/: App.jsx  styles.css
